--- a/q5.html
+++ b/q5.html
@@ -10,9 +10,13 @@ Create green space equal to the current font size around those labels. -->
             color: red;
             background: white;
         }
+        
+        .green_label {
+            background-color: green;
+            padding: 1em; /* Padding equal to the current font size (1em) */
+        }
     </style>
 </head>
-
 
 <body>
     <h1 class="red-heading">This text is in red</h1>
@@ -30,10 +34,7 @@ Create green space equal to the current font size around those labels. -->
         <p>
             <button type="submit">Submit</button>
         </p>
-
-
     </form>
 </body>
-
 
 </html>
