--- a/index.html
+++ b/index.html
@@ -1,17 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.3/css/bootstrap-grid.min.css" integrity="sha512-i1b/nzkVo97VN5WbEtaPebBG8REvjWeqNclJ6AItj7msdVcaveKrlIIByDpvjk5nwHjXkIqGZscVxOrTb9tsMA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>UX220 Test 2</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.3/css/bootstrap-grid.min.css" integrity="sha512-i1b/nzkVo97VN5WbEtaPebBG8REvjWeqNclJ6AItj7msdVcaveKrlIIByDpvjk5nwHjXkIqGZscVxOrTb9tsMA==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <style>
-        img{
+        img {
             max-width: 100%;
         }
     </style>
 </head>
 <body>
-    <main class="row"><section class="col-md-8"><x-markdown2html src="README.md"></x-markdown2html></section>
-    <section class="col-md-4"><x-sitemap /></x-sitemap></main></section>
+    <main class="row">
+        <!-- Main Content -->
+        <section class="col-md-8">
+            <h1>UX220 Test 2 Questions</h1>
+            <p>Click on a question below to view its solution:</p>
+            <ul>
+                <li><a href="q1.html">Question 1: Fix the ID Issue</a></li>
+                <li><a href="q2.html">Question 2: Action Attribute</a></li>
+                <li><a href="q3.html">Question 3: Add Subject Dropdown</a></li>
+                <li><a href="q4.html">Question 4: Custom Element for Days to New Year</a></li>
+                <li><a href="q5.html">Question 5: CSS Rule for Labels</a></li>
+            </ul>
+        </section>
+
+        <!-- Sitemap -->
+        <section class="col-md-4">
+            <x-sitemap></x-sitemap>
+        </section>
+    </main>
+
+    <!-- JavaScript -->
     <script src="https://custom-element.pages.dev/custom-element.js" crossorigin="anonymous"></script>
 </body>
-
 </html>
