--- a/q3.html
+++ b/q3.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
 <head>
-    <!-- The following code is for a form in twitter boostrap. Add a field that allows the user to select a subject from 
-either "support," or "consulting," choices In the correct part of the file also add html so that the page will 
-display with 1:1 scale on a mobile device. -->
+    <!-- Meta tag for mobile responsiveness -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact Form</title>
+
+    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" />
+
     <style>
         .form-box {
             max-width: 500px;
@@ -18,7 +21,6 @@ display with 1:1 scale on a mobile device. -->
     </style>
 </head>
 
-
 <body>
     <main>
         <section id="contact">
@@ -28,24 +30,40 @@ display with 1:1 scale on a mobile device. -->
                 <p>Using <a href="https://getbootstrap.com">Bootstrap</a> and <a
                         href="https://www.formbucket.com">FormBucket</a></p>
                 <form action="https://api.formbucket.com/f/c2K3QTQ" method="post">
+                    <!-- Name Field -->
                     <div class="form-group">
                         <label for="name">First and Last Name</label>
-                        <input class="form-control" id="name" type="text" name="Name">
+                        <input class="form-control" id="name" type="text" name="Name" required>
                     </div>
+
+                    <!-- Email Field -->
                     <div class="form-group">
                         <label for="email">Email Address</label>
-                        <input class="form-control" id="email" type="email" name="Email">
+                        <input class="form-control" id="email" type="email" name="Email" required>
                     </div>
+
+                    <!-- Subject Dropdown -->
+                    <div class="form-group">
+                        <label for="subject">Subject</label>
+                        <select class="form-control" id="subject" name="Subject" required>
+                            <option value="" disabled selected>Select a subject</option>
+                            <option value="support">Support</option>
+                            <option value="consulting">Consulting</option>
+                        </select>
+                    </div>
+
+                    <!-- Message Field -->
                     <div class="form-group">
                         <label for="message">Message</label>
-                        <textarea class="form-control" id="message" name="Message"></textarea>
+                        <textarea class="form-control" id="message" name="Message" rows="4" required></textarea>
                     </div>
+
+                    <!-- Submit Button -->
                     <input class="btn btn-primary" type="submit" value="Submit" />
+                </form>
             </div>
-            </form>
         </section>
     </main>
 </body>
-
 
 </html>
